assets/css/style.css
/* ... */
.container-custom1 {
  max-width: 1360px;
  padding-left: 12px;
  padding-right: 12px;
  margin-left: auto;
  margin-right: auto;
}

.cursor-pointer {
  cursor: pointer;
}

.gap-between-nav-icon {
  gap: 35px;
}

.nav-button {
  padding: 13px 32px;
  color: var(--white1);
  background: linear-gradient(
    160deg,
    rgba(0, 136, 255, 0.58) -14.36%,
    #0069e3 113.71%
  );
  box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.5);
  position: relative;
  z-index: 1;
  border-radius: 40px;
  transition: color 300ms linear;
  border: 2px solid transparent;
}

.nav-button::before {
  background: var(--black);
  border: 2px solid var(--white1);
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  border-radius: 40px;
  transition: opacity 300ms linear;
}

.nav-button:hover::before {
  opacity: 1;
}

.nav-button:hover {
  color: var(--white1);
}

.line1,
.line2,
.line3 {
  transition: all 0.3s linear;
}

ol,
ul {
  padding-left: 0 !important;
}

.nav-bar-bg {
  border-bottom: 1px solid rgba(251, 253, 255, 0.2);
  background: rgba(251, 253, 255, 0.01);
}

.nav-icon {
  position: relative;
}

.nav-icon::after {
  position: absolute;
  content: "";
  width: 0;
  right: 0;
  bottom: -10%;
  height: 3px;
  border-radius: 30px;
  background-color: var(--offwhite2);
  transition: all 300ms linear;
}

.nav-icon:hover::after {
  width: 100%;
  left: 0;
}

/* hero-section */
.hero-section-line {
  max-width: 109px;
  width: 100%;
  border: 1px solid var(--blue);
  opacity: 100% !important;
}

.hero-section-padding {
  padding-top: 81px;
}

.hero-section-para {
  max-width: 515px;
  line-height: 170%;
}

.request {
  padding: 13px 32px;
  color: var(--white1);
  background: linear-gradient(
    160deg,
    rgba(0, 136, 255, 0.58) -14.36%,
    #0069e3 113.71%
  );
  box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.5);
  position: relative;
  z-index: 1;
  border-radius: 40px;
  transition: color 300ms linear;
}

.request::before {
  background: var(--black);
  border: 2px solid var(--white1);
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  border-radius: 40px;
  transition: opacity 300ms linear;
}

.request:hover::before {
  opacity: 1;
}

.request:hover {
  color: var(--white1);
}

.hero-section-big-box {
  max-width: 1437px;
  padding-left: 12px;
  padding-right: 12px;
  margin-left: auto;
  margin-right: auto;
}

.transform-big-img {
  transform: translateY(0%);
}

.gap-between-icon {
  gap: 40px;
}

.opacity-7 {
  opacity: 0.7;
}

.hero-slider .slick-prev:before,
.slick-next:before {
  display: none;
}

.hero-slider .slick-next {
  right: 0px !important;
}

.slider1-img {
  filter: grayscale(100%) !important;
  mix-blend-mode: multiply;
  height: 75px;
  object-fit: cover;
  margin: auto;
}

.slider1-img1 {
  filter: grayscale(100%) !important;
  mix-blend-mode: multiply;
  max-width: 130px;
  height: 75px;
  object-fit: cover;
  margin: auto;
}

.slider1-img:hover,
.slider1-img1:hover {
  filter: grayscale(0) !important;
}

/* section2 */
.s2-box {
  max-width: unset;
}

.s2-padding {
  margin-top: unset;
  padding-bottom: 25px;
}

.watch,
.watch1 {
  padding: 13px 32px;
  color: var(--white1);
  background: linear-gradient(
    160deg,
    rgba(0, 136, 255, 0.58) -14.36%,
    #0069e3 113.71%
  );
  box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.5);
  position: relative;
  z-index: 1;
  border-radius: 40px;
  transition: color 300ms linear;
  border: 2px solid transparent;
}

.watch::before,
.watch1::before {
  background: var(--black);
  border: 2px solid var(--white1);
  content: "";
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  border-radius: 40px;
  transition: opacity 300ms linear;
}

.watch1:hover::before,
.watch:hover::before {
  opacity: 1;
}

.watch:hover,
.watch1:hover {
  color: var(--white1);
}

/* section3 */
.s3-padding {
  padding-top: 50px;
  padding-bottom: 50px;
}

.watch1 {
  border-radius: 40px;
  background: linear-gradient(
    160deg,
    rgba(0, 136, 255, 0.58) -14.36%,
    #0069e3 113.71%
  );
  box-shadow: 0px 4px 32px 0px rgba(39, 70, 237, 0.5);
  padding: 13px 32px;
  border: 0;
  margin-top: 10px;
  transition: all 300ms linear;
}

.s3-box1 {
  border-radius: 10px;
  background: rgba(3, 137, 255, 0.12);
  backdrop-filter: blur(12.5px);
  max-width: 531px;
  width: 100%;
  padding: 17px 17px 37px 16px;
}

.gap_22 {
  gap: 22px;
}

.s3-clock-box {
  padding: 16px;
  width: 64px;
  height: 64px;
  border-radius: 8px;
  background: rgba(3, 137, 255, 0.1);
}

.s3-b0x-para {
  max-width: 370px;
}

.s3-box2 {
  max-width: 531px;
  width: 100%;
  border-radius: 10px;
  background: rgba(3, 137, 255, 0.12);
  backdrop-filter: blur(12.5px);
  padding: 22.5px 20px 23.5px 22.544px;
}

.opacity-8 {
  opacity: 0.8;
}

.gap-10 {
  gap: 10px;
}

.accordion {
  --bs-accordion-bg: none !important;
  --bs-accordion-border-width: none !important;
  --bs-accordion-btn-focus-box-shadow: none !important;
  --bs-accordion-active-color: #0389ff !important;
  --bs-accordion-active-bg: none !important;
  --bs-accordion-active-padding-bottum: 7px !important;
  max-width: 553px !important;
  width: 100% !important;
  margin-left: auto !important;
  margin-right: auto !important;
}

.accordion-body {
  padding: 0 !important;
  color: var(--white1) !important;
  font-family: "Plus Jakarta Sans", sans-serif !important;
  padding: 5px 20px 20px 99px !important;
  font-weight: 400 !important;
  opacity: 0.7 !important;
}

.accordion-button::after {
  background-image: unset !important;
}
/* ... */

